--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,7 +1,14 @@
 .nav {
-  grid-area: n;
-  background-color: burlywood;
+    grid-area: n;
+    background-color: burlywood;
+    padding: 20px;
 }
-.item {
-  color: white;
+
+.item a {
+    color: white;
+    text-decoration: none;
+}
+
+.item a.active {
+    color: red;
 }
